# vitality-studio

./: README.md  follow_instruction.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: auth.py  main.py  metrics.py  storage.py  users.json
backend/app/ai/: context.py  registry.py  router.py
backend/app/ai/providers/: base.py  hf_inference.py  ollama.py  openai.py
backend/app/api/: auth.py  conversations.py  execute.py  generate.py
backend/app/plugins/: manager.py
docker/: docker-compose.yml
docker/prometheus/: prometheus.yml
execution_engine/: Dockerfile  metrics.py  orchestrator.py  remote_orchestrator.py  runner.py
frontend/: README.md  electron-main.js  index.html  package.json  preload.js
frontend/plugins/: README.md
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: Editor.jsx  ExecutorPanel.jsx  MessageList.jsx  Sidebar.jsx
kubernetes/: backend-deployment.yaml  execution-deployment.yaml  namespace.yaml
storage/users/: README.md
tests/: test_auth.py  test_health.py
tests/ai/: test_providers.py  test_router_fallback.py
tests/api/: test_generate_api.py
tests/auth/: test_auth_service.py
tests/execution/: test_orchestrator.py
tests/integration/: test_execute_integration.py
tests/plugins/: test_plugin_manager.py
tests/storage/: test_storage_service.py
