[project]
name = "vitality_studio"
version = "0.1.0"
description = "Vitality Studio - AI-Orchestrated Development Studio (prototype)"
requires-python = ">=3.12"

[project.dependencies]
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"
python-jose = {extras=["cryptography"], version="*"}
passlib = {extras=["bcrypt"], version="*"}
httpx = "*"
